--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
     <link rel="apple-touch-icon" sizes="180x180" href="src/public/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="src/public/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="src/public/favicon-16x16.png">
     <link rel="manifest" href="src/public/site.webmanifest">
+    <!-- HTML Meta Tags -->
+    <title>Home</title>
+    <meta name="description" content="A homepage that is easy for users to customize ">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://atklenner.github.io/homepage/">
+    <meta property="og:title" content="Home">
+    <meta property="og:description" content="A homepage that is easy for users to customize ">
+    <meta property="og:image" content="https://raw.githubusercontent.com/atklenner/homepage/main/screenshot.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="atklenner.github.io">
+    <meta property="twitter:url" content="https://atklenner.github.io/homepage/">
+    <meta name="twitter:title" content="Home">
+    <meta name="twitter:description" content="A homepage that is easy for users to customize ">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/atklenner/homepage/main/screenshot.png">
   </head>
   <body>
     <div id="root"></div>
