change name of project in og tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://atklenner.github.io/homepage/">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Easy Cutsom Homepage">
     <meta property="og:description" content="A homepage that is easy for users to customize ">
     <meta property="og:image" content="https://raw.githubusercontent.com/atklenner/homepage/main/screenshot.png">
 
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="atklenner.github.io">
     <meta property="twitter:url" content="https://atklenner.github.io/homepage/">
-    <meta name="twitter:title" content="Home">
+    <meta name="twitter:title" content="Easy Custom Homepage">
     <meta name="twitter:description" content="A homepage that is easy for users to customize ">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/atklenner/homepage/main/screenshot.png">
   </head>
