I am very good at speeling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://atklenner.github.io/homepage/">
-    <meta property="og:title" content="Easy Cutsom Homepage">
+    <meta property="og:title" content="Easy Custom Homepage">
     <meta property="og:description" content="A homepage that is easy for users to customize ">
     <meta property="og:image" content="https://raw.githubusercontent.com/atklenner/homepage/main/screenshot.png">
 
